# penguin

penguin/: pyproject.toml
penguin/models/: dt.pck  knn.pck  lr.pck  svm.pck
penguin/notebooks/: classificacio.ipynb  client.ipynb
penguin/penguin/: specie_predict_app.py
